--- a/ScrollTumbnails/Content/Site.css
+++ b/ScrollTumbnails/Content/Site.css
@@ -46,3 +46,58 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+body {
+height:100%;
+width:100%;
+}
+
+div.container_scroll {
+
+height:120px;
+background-color:#000000;
+overflow:hidden;
+
+}
+span.left {
+position:absolute;
+left:0;
+top:0;
+z-index:10;
+width:30px;
+height:100%;
+text-align:center;
+vertical-align:middle;
+line-height:100px;
+background-color:#ffffff;
+}
+
+span.right {
+position:absolute;
+right:0;
+z-index:10;
+width:30px;
+height:100%;
+text-align:center;
+vertical-align:middle;
+line-height:100px;
+background-color:#ffffff;
+}
+
+div.container_img {
+position:relative;
+/*width:3000px;*/
+overflow:hidden;
+height:120px;
+}
+div.container_img a {
+    position:relative;
+    float:left;
+    opacity:0.5;
+}
+div.container_img a:hover {
+    position:relative;
+    float:left;
+    opacity:1;
+}
