--- a/ScrollTumbnails/Views/Home/Index.cshtml
+++ b/ScrollTumbnails/Views/Home/Index.cshtml
@@ -2,4 +2,77 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="container_scroll">
+    <span class="left"><</span>
+    <span class="right">></span>
+    <div class="container_img">
+        <a href="#">
+            <img src="~/Content/Img/2100_5.jpg" />
+        </a>
+        <a href="#">
+
+            <img src="~/Content/Img/IMG_6824.jpg" />
+        </a>
+        <a href="#">
+            <img src="~/Content/Img/IMG_6902.jpg" />
+        </a>
+        <a href="#">
+            <img src="~/Content/Img/IMG_6931.jpg" />
+        </a>
+        <a href="#">
+            <img src="~/Content/Img/2100_5.jpg" />
+        </a>
+        <a href="#">
+
+            <img src="~/Content/Img/IMG_6824.jpg" />
+        </a>
+        <a href="#">
+            <img src="~/Content/Img/IMG_6902.jpg" />
+        </a>
+        <a href="#">
+            <img src="~/Content/Img/IMG_6931.jpg" />
+        </a>
+        <a href="#">
+            <img src="~/Content/Img/2100_5.jpg" />
+        </a>
+        <a href="#">
+
+            <img src="~/Content/Img/IMG_6824.jpg" />
+        </a>
+        <a href="#">
+            <img src="~/Content/Img/IMG_6902.jpg" />
+        </a>
+        <a href="#">
+            <img src="~/Content/Img/IMG_6931.jpg" />
+        </a>
+        <a href="#">
+            <img src="~/Content/Img/2100_5.jpg" />
+        </a>
+        <a href="#">
+
+            <img src="~/Content/Img/IMG_6824.jpg" />
+        </a>
+        <a href="#">
+            <img src="~/Content/Img/IMG_6902.jpg" />
+        </a>
+        <a href="#">
+            <img src="~/Content/Img/IMG_6931.jpg" />
+        </a>
+    </div>
+</div>
+
+<script>
+    
+
+    $(function () {
+        var sum = 0;
+        $("a").each(function () {
+            //console.log(index + ": " + $(this).text());
+            sum = sum + $(this).width();
+        });
+        $("div.container_img").width(sum);
+        console.log(sum);
+
+
+    });
+</script>
