--- a/ScrollTumbnails/Views/Shared/_Layout.cshtml
+++ b/ScrollTumbnails/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
     @*@Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")*@
+    <script src="~/Scripts/jquery-1.8.2.min.js"></script>
     <link href="~/Content/Site.css" rel="stylesheet" />
 </head>
 <body>
