--- a/ScrollTumbnails/Views/Shared/_Layout.cshtml
+++ b/ScrollTumbnails/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")*@
     <script src="~/Scripts/jquery-1.8.2.min.js"></script>
     <link href="~/Content/Site.css" rel="stylesheet" />
+    <script src="~/Content/JS/MyScript.js"></script>
 </head>
 <body>
     @RenderBody()
