--- a/ScrollTumbnails/Views/Shared/_Layout.cshtml
+++ b/ScrollTumbnails/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=1140" />
     <title>@ViewBag.Title</title>
     @*@Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")*@
