--- a/ScrollTumbnails/Content/Site.css
+++ b/ScrollTumbnails/Content/Site.css
@@ -51,6 +51,7 @@ table {
 body {
 height:100%;
 width:100%;
+background-color:#252930;
 }
 
 div.container_scroll {
@@ -66,7 +67,7 @@ left:0;
 top:0;
 z-index:10;
 width:30px;
-height:100%;
+height:120px;
 text-align:center;
 vertical-align:middle;
 line-height:100px;
@@ -79,7 +80,7 @@ position:absolute;
 right:0;
 z-index:10;
 width:30px;
-height:100%;
+height:120px;
 text-align:center;
 vertical-align:middle;
 line-height:100px;
@@ -99,8 +100,34 @@ div.container_img a {
     float:left;
     opacity:0.5;
 }
+
+div.container_img a img{
+    max-height:120px;
+}
 div.container_img a:hover {
     position:relative;
     float:left;
     opacity:1;
+}
+
+div.container_gallery {
+width: 900px;
+height: 600px;
+position: absolute;
+top: 50%;
+left: 50%;
+margin-left: -450px;
+margin-top: -300px;
+
+}
+
+div.container_gallery img {
+max-height: 600px;
+max-width: 900px;
+position: absolute;
+margin: auto;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
 }
