--- a/ScrollTumbnails/Views/Home/Index.cshtml
+++ b/ScrollTumbnails/Views/Home/Index.cshtml
@@ -7,57 +7,77 @@
     <span id="scroll_right" class="right">></span>
     <div class="container_img">
         <a href="#">
-            <img src="~/Content/Img/2100_5.jpg" />
+            <img src="~/Content/Img/test.jpg" />
         </a>
         <a href="#">
 
-            <img src="~/Content/Img/IMG_6824.jpg" />
-        </a>
-        <a href="#">
-            <img src="~/Content/Img/IMG_6902.jpg" />
-        </a>
-        <a href="#">
-            <img src="~/Content/Img/IMG_6931.jpg" />
-        </a>
-        <a href="#">
-            <img src="~/Content/Img/2100_5.jpg" />
+            <img src="~/Content/Img/test2.jpg" />
         </a>
         <a href="#">
 
-            <img src="~/Content/Img/IMG_6824.jpg" />
-        </a>
-        <a href="#">
-            <img src="~/Content/Img/IMG_6902.jpg" />
-        </a>
-        <a href="#">
-            <img src="~/Content/Img/IMG_6931.jpg" />
-        </a>
-        <a href="#">
-            <img src="~/Content/Img/2100_5.jpg" />
+            <img src="~/Content/Img/IMG_6853.jpg" />
         </a>
         <a href="#">
 
-            <img src="~/Content/Img/IMG_6824.jpg" />
-        </a>
-        <a href="#">
-            <img src="~/Content/Img/IMG_6902.jpg" />
-        </a>
-        <a href="#">
-            <img src="~/Content/Img/IMG_6931.jpg" />
-        </a>
-        <a href="#">
-            <img src="~/Content/Img/2100_5.jpg" />
+            <img src="~/Content/Img/IMG_6861.jpg" />
         </a>
         <a href="#">
 
-            <img src="~/Content/Img/IMG_6824.jpg" />
+            <img src="~/Content/Img/IMG_6881.jpg" />
         </a>
         <a href="#">
-            <img src="~/Content/Img/IMG_6902.jpg" />
+
+
+            <img src="~/Content/Img/test.jpg" />
         </a>
         <a href="#">
-            <img src="~/Content/Img/IMG_6931.jpg" />
+
+            <img src="~/Content/Img/test2.jpg" />
+        </a>
+        <a href="#">
+
+            <img src="~/Content/Img/IMG_6853.jpg" />
+        </a>
+        <a href="#">
+
+            <img src="~/Content/Img/IMG_6861.jpg" />
+        </a>
+        <a href="#">
+
+
+            <img src="~/Content/Img/IMG_6881.jpg" />
+        </a>
+        <a href="#">
+
+            <img src="~/Content/Img/test.jpg" />
+        </a>
+        <a href="#">
+
+            <img src="~/Content/Img/test2.jpg" />
+        </a>
+        <a href="#">
+
+            <img src="~/Content/Img/IMG_6853.jpg" />
+        </a>
+        <a href="#">
+
+
+            <img src="~/Content/Img/IMG_6861.jpg" />
+        </a>
+        <a href="#">
+
+            <img src="~/Content/Img/IMG_6881.jpg" />
+        </a>
+        <a href="#">
+
+            <img src="~/Content/Img/test.jpg" />
         </a>
     </div>
+
+
+</div>
+
+<div class="container_gallery">
+    <img src="" />
 </div>
 
