Добавил подпись к альбому

--- a/ScrollTumbnails/Views/Home/Index.cshtml
+++ b/ScrollTumbnails/Views/Home/Index.cshtml
@@ -79,5 +79,7 @@
 
 <div class="container_gallery">
     <img src="" />
+    <a href="#">Описание события. Чтобы посмотреть фотографии, надо нажать на ссылку. Произойдет переход к альбому, который будет выглядеть также. Только без надписи, естественно.</a>
+    
 </div>
 
