--- a/ScrollTumbnails/Content/Site.css
+++ b/ScrollTumbnails/Content/Site.css
@@ -130,4 +130,28 @@ top: 0;
 left: 0;
 right: 0;
 bottom: 0;
+z-index:1;
 }
+
+div.container_gallery a {
+z-index:50;
+position:absolute;
+bottom:10px;
+left:10px;
+right:10px;
+text-decoration:none;
+color:#ffffff;
+font-family:Arial;
+text-transform:uppercase;
+font-size:22px;
+text-align:center;
+background-color:#252930;
+padding:5px;
+line-height:26px;
+}
+
+div.container_gallery a:hover {
+border:1px solid;
+border-color:#ffffff;
+
+    }
